--- a/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -13,16 +13,16 @@
     </li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password"
                             asp-page="./ChangePassword">Password</a></li>
-    @if (hasExternalLogins)
+    @*@if (hasExternalLogins)
     {
         <li id="external-logins" class="nav-item"><a id="external-login"
                                                      class="nav-link @ManageNavPages.ExternalLoginsNavClass(ViewContext)"
                                                      asp-page="./ExternalLogins">External logins</a></li>
-    }
-    <li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)"
+    }*@
+    @*<li class="nav-item"><a class="nav-link @ManageNavPages.TwoFactorAuthenticationNavClass(ViewContext)"
                             id="two-factor" asp-page="./TwoFactorAuthentication">Two-factor authentication</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data"
-                            asp-page="./PersonalData">Personal data</a></li>
+                            asp-page="./PersonalData">Personal data</a></li>*@
 </ul>
 <form class="form-inline mt-5 logout" asp-area="Identity" asp-page="/Account/Logout" 
       asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })"
