--- a/Areas/Identity/Pages/Account/Profile/Edit.cshtml
+++ b/Areas/Identity/Pages/Account/Profile/Edit.cshtml
@@ -6,43 +6,57 @@
 }
 
 <link rel="stylesheet" href="~/css/areas/identity/account/profile/edit.css"/>
+<link rel="stylesheet" href="~/css/areas/project/switch.css"/>
 <link rel="stylesheet" href="~/css/margin.css"/>
 
 <div class="mlr-5">
     <partial name="_StatusMessage" for="StatusMessage"/>
-    <h2>Edit Resume</h2>
+    <h2>Редактирование резюме</h2>
 
     <form method="post" onsubmit="return @Model.IsHaveVisibleVacancy ? confirm('Ваш проект будет снят с публикации') : null">
         <input type="hidden" asp-for="Input.ResumeId" />
         <input type="hidden" asp-for="Input.IsEdit" />
         <div>
+            <label asp-for="Input.FullName">Имя</label>
+            <input asp-for="Input.FullName" class="form-control" placeholder="Иванов Иван Иванович"/>
+        </div>
+        
+        <div>
             <label asp-for="Input.Title">Желаемая роль</label>
-            <input asp-for="Input.Title" class="form-control"/>
+            <input asp-for="Input.Title" class="form-control" placeholder="Backend разработчик"/>
         </div>
 
         <div>
             <label asp-for="Input.Summary">О себе</label>
-            <textarea asp-for="Input.Summary" class="form-control"></textarea>
+            <textarea asp-for="Input.Summary" class="form-control" placeholder="Описание"></textarea>
         </div>
 
+        <div class="toggle-container mt-2">
+        <label class="toggle-label" asp-for="Input.IsVisible">Показывать резюме</label>
+        <label class="toggle-switch">
+            <input type="checkbox" asp-for="Input.IsVisible" checked>
+            <span class="slider"></span>
+        </label>
+        </div>
+        
         <h3>Контактная информация</h3>
         <div>
             <label asp-for="Input.Email">Email</label>
-            <input asp-for="Input.Email" type="email" class="form-control"/>
+            <input asp-for="Input.Email" type="email" class="form-control" placeholder="example@mail.com"/>
         </div>
         <div>
             <label asp-for="Input.Phone">Телефон</label>
-            <input asp-for="Input.Phone" type="number" class="form-control"/>
+            <input asp-for="Input.Phone" class="form-control" placeholder="+1 234 567 89"/>
         </div>
         <div>
             <label asp-for="Input.Website">Сайт</label>
-            <input asp-for="Input.Website" class="form-control"/>
+            <input asp-for="Input.Website" class="form-control" placeholder="example.com"/>
         </div>
 
         <div class="mt-3">
             <h5><label asp-for="Input.SkillsRaw">Навыки</label></h5>
             <h6>(через запятую)</h6>
-            <input asp-for="Input.SkillsRaw" class="form-control mb-1"/>
+            <input asp-for="Input.SkillsRaw" class="form-control mb-1" placeholder="C#, ASP.NET, Razor Pages"/>
         </div>
 
         <div class="button-container">
@@ -56,6 +70,7 @@
         <form method="post" asp-page-handler="Delete"
               onsubmit="return confirm('Вы уверены, что хотите удалить резюме?');"
               class="mt-3">
+            <input type="hidden" asp-for="Input.ResumeId" />
             <button type="submit" class="btn btn-danger">Удалить резюме</button>
         </form>
     }
